# Query-quest

./: .env.example  .gitignore  README.md  README.txt  ca.pem  db_pop.py  example-certificate.pem  metric.py  openai-test.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/component/: CodeInput.jsx  Timer.jsx
client/src/pages/: Congrat.jsx  ErrorPage.jsx  LandingPage.jsx  LostPage.jsx  Prequestion.jsx  Question.jsx
config/: settings.py  urls.py
data/questions/: advanced.json  beginner.json  medium.json  single_row.json
data/teams/: all.json
server/: .env.example  Dockerfile  README.txt  requirements.txt
server/config/: settings.py
server/data/questions/: advanced.json
server/src/: admin.py  models.py  question_validation.py  urls.py  utils.py  views.py
server/src/migrations/: 0005_alter_history_flag.py
src/: authentication.py  models.py  question_validation.py  serializers.py  urls.py  utils.py  views.py
src/migrations/: 0001_initial.py  0002_alter_history_score_alter_history_team_and_more.py  0002_rename_question_number_history_question_and_more.py  0003_alter_team_question.py  0003_rename_question_history_score.py  0004_alter_team_token.py
