[project]
name = "query-quest"
version = "0.1.0"
description = "web application for interactive learning assessments for beginner data scientists."
authors = [
    {name = "Yasser Messahli",email = "y_messahli@estin.dz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "openai (>=1.68.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
